Defocus the omnibox when switching tabs.

CL 905511 introduced a bug where previously BVC was defocusing the
omnibox by sending selectedTabChanged to the toolbar, but this was
broken.

Since the location bar now directly observes the webstate with its
mediator, use this to defocus omnibox when the webstate changes.

Bug: 813944
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: Ibc67faaae115032e0a3c6e6b5e3879d7e52f8f0f
Reviewed-on: https://chromium-review.googlesource.com/960663
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542817}
Former-commit-id: d21e3816b10d22501455fea1468d56df514ea442